--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -4,7 +4,8 @@
 %table#movies.table.table-striped.col-md-12
   %thead
     %tr
-      %th{:class => (@sort_by == "title") && 'hilite'}= link_to 'Movie Title', movies_path(:sort_by => 'title'), :id => "title_header"
+      -# Params comes from the user's browser when they request the page
+      %th{:class => (@sort_by == "title") && 'hilite'}= link_to 'Movie Title', movies_path(:sort_by => 'title'), :id => "title_header"  
       %th Rating
       %th{:class => (@sort_by == "release_date") && 'hilite'}= link_to 'Release Date', movies_path(:sort_by => 'release_date'), :id => "release_date_header"
       %th More Info
